--- a/src/EdgeDB.Net.QueryBuilder/EdgeDB.Net.QueryBuilder.csproj
+++ b/src/EdgeDB.Net.QueryBuilder/EdgeDB.Net.QueryBuilder.csproj
@@ -1,38 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
+  <Import Project="../../EdgeDB.Net.targets" />
   <PropertyGroup>
-	<AssemblyName>EdgeDB.Net.QueryBuilder</AssemblyName>
-	<RootNamespace>EdgeDB</RootNamespace>
+	  <AssemblyName>EdgeDB.Net.QueryBuilder</AssemblyName>
+	  <RootNamespace>EdgeDB</RootNamespace>
+    <Description>An optional extension to the base driver that adds a query builder.</Description>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Description>An optional extension to the base driver that allows for query building.</Description>
-	<NoWarn>CS1591</NoWarn>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <WarningLevel>5</WarningLevel>
+	  <NoWarn>CS1591</NoWarn>
     <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <WarningLevel>5</WarningLevel>
-    <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
   </PropertyGroup>
-
-  <ItemGroup>
-    <None Remove="operators.yml" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="..\..\branding\PackageLogo.png">
-      <Pack>True</Pack>
-      <PackagePath>\</PackagePath>
-    </None>
-  </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\EdgeDB.Net.Driver\EdgeDB.Net.Driver.csproj" />
   </ItemGroup>
-
 </Project>
