--- a/tests/EdgeDB.Tests.QueryBuilder.Unit/EdgeDB.Tests.QueryBuilder.Unit.csproj
+++ b/tests/EdgeDB.Tests.QueryBuilder.Unit/EdgeDB.Tests.QueryBuilder.Unit.csproj
@@ -16,8 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\EdgeDB.Net.Driver\EdgeDB.Net.Driver.csproj" />
-    <ProjectReference Include="..\src\EdgeDB.Net.QueryBuilder\EdgeDB.Net.QueryBuilder.csproj" />
+    <ProjectReference Include="..\..\src\EdgeDB.Net.Driver\EdgeDB.Net.Driver.csproj" />
+    <ProjectReference Include="..\..\src\EdgeDB.Net.QueryBuilder\EdgeDB.Net.QueryBuilder.csproj" />
   </ItemGroup>
 
 </Project>
