--- a/src/EdgeDB.Net.QueryBuilder/EdgeDB.Net.QueryBuilder.csproj
+++ b/src/EdgeDB.Net.QueryBuilder/EdgeDB.Net.QueryBuilder.csproj
@@ -12,6 +12,14 @@
     <WarningLevel>5</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="Translators\Methods\Generated\**" />
+    <EmbeddedResource Remove="Translators\Methods\Generated\**" />
+    <None Remove="Translators\Methods\Generated\**" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\EdgeDB.Net.Driver\EdgeDB.Net.Driver.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="stdlib\" />
   </ItemGroup>
 </Project>
