--- a/examples/EdgeDB.Examples.ExampleApp/EdgeDB.Examples.ExampleApp.csproj
+++ b/examples/EdgeDB.Examples.ExampleApp/EdgeDB.Examples.ExampleApp.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\tools\EdgeDB.ILExpressionParser\EdgeDB.ILExpressionParser.csproj" />
     <ProjectReference Include="..\..\src\EdgeDB.Net.Driver\EdgeDB.Net.Driver.csproj" />
     <ProjectReference Include="..\..\src\EdgeDB.Net.QueryBuilder\EdgeDB.Net.QueryBuilder.csproj" />
   </ItemGroup>
