--- a/src/EdgeDB.Net.CLI/EdgeDB.Net.CLI.csproj
+++ b/src/EdgeDB.Net.CLI/EdgeDB.Net.CLI.csproj
@@ -8,7 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CliWrap" Version="3.4.4" />
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EdgeDB.Net.Driver\EdgeDB.Net.Driver.csproj" />
   </ItemGroup>
 
 </Project>
