--- a/src/EdgeDB.Net.CLI/Properties/launchSettings.json
+++ b/src/EdgeDB.Net.CLI/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "EdgeDB.Net.CLI": {
       "commandName": "Project",
-      "commandLineArgs": "generate"
+      "commandLineArgs": "generate -f"
     }
   }
 }
