Work on watch mode & demo project

--- a/src/EdgeDB.Net.CLI/Properties/launchSettings.json
+++ b/src/EdgeDB.Net.CLI/Properties/launchSettings.json
@@ -2,7 +2,8 @@
   "profiles": {
     "EdgeDB.Net.CLI": {
       "commandName": "Project",
-      "commandLineArgs": "generate -f"
+      //"commandLineArgs": "file-watch-internal --dir C:\\Users\\lynch\\source\\repos\\EdgeDB"
+      "commandLineArgs": "generate -o C:\\Users\\lynch\\source\\repos\\EdgeDB\\examples\\EdgeDB.Examples.GenerationExample\\Generated"
     }
   }
 }
