--- a/examples/EdgeDB.Examples.GenerationExample/EdgeDB.Examples.GenerationExample.csproj
+++ b/examples/EdgeDB.Examples.GenerationExample/EdgeDB.Examples.GenerationExample.csproj
@@ -13,4 +13,8 @@
     <None Remove="EdgeDB.Generated\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="EdgeDB.Generated\EdgeDB.Generated.csproj" />
+  </ItemGroup>
+
 </Project>
