--- a/src/EdgeDB.Net.CLI/EdgeDB.Net.CLI.csproj
+++ b/src/EdgeDB.Net.CLI/EdgeDB.Net.CLI.csproj
@@ -10,6 +10,8 @@
   <ItemGroup>
     <PackageReference Include="CliWrap" Version="3.4.4" />
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
+    <PackageReference Include="Serilog" Version="2.11.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
   </ItemGroup>
 
   <ItemGroup>
