--- a/src/EdgeDB.Net.CLI/EdgeDB.Net.CLI.csproj
+++ b/src/EdgeDB.Net.CLI/EdgeDB.Net.CLI.csproj
@@ -1,10 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
+  <Import Project="../../EdgeDB.Net.targets" />
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+	<Nullable>enable</Nullable>
+	<AssemblyName>EdgeDB.Net.CLI</AssemblyName>
+	<RootNamespace>EdgeDB</RootNamespace>
+	<Description>A CLI tool to generate C# files from edgeql files</Description>
+	<ToolCommandName>edgeql</ToolCommandName>
+    <PackAsTool>true</PackAsTool>
   </PropertyGroup>
 
   <ItemGroup>
